# rust_api_crud

./: Cargo.toml  Rocket.toml
src/: gridCase.rs  gridcase.rs  main.rs
