[package]
name = "rust_api_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
sqlx = { version = "0.6", features = ["mssql", "chrono", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }